pkg/provider/kubernetes/ingress/fixtures/Node-Internal-IP.yml
---
kind: Node
apiVersion: v1
metadata:
  name: node1

status:
  addresses:
    - type: InternalIP
      address: 10.0.0.1
    - type: ExternalIP
      address: 1.2.3.4

---
kind: Node
apiVersion: v1
metadata:
  name: node2

status:
  addresses:
    - type: InternalIP
      address: 10.0.0.2

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: foo
  namespace: default

spec:
  rules:
  - host: "*.foo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: default

spec:
  ports:
    - port: 80

  clusterIP: 10.0.0.1

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: default
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - port: 8080
    name: ""
endpoints:
  - addresses:
      - 10.10.0.1
    conditions:
      ready: true
